# jmm

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  BucketSort.c  BucketSort.h  CMakeLists.txt  Doxyfile.in  FMM.c  FMMgradients.c  HeapSort.c  HeapSort.h  JMMConfig.cmake.in  JMMmeasurements.c  JMMs_dijkstra_dial.c  JMMstatsplots.m  JMMstatsplots1.m  JMMupdates.c  JMMupdates.h  JMMversion2.c  JMMversion2debug.c  JMMversion3.c  JMMversion4.c  LICENSE  LICENSE.txt  Newton.c  Newton.h  QuickSort.c  QuickSort.h  README.md  README.org  TODO.md  alist.c  alist.h  array.c  array.h  bary.c  bary.h  bb.c  bb.h  (+145 more)
.circleci/: config.yml
Data/: FMM_ibox_slo1.txt  FMM_ibox_slog.txt  FMM_ibox_slom.txt  FMM_ibox_slov.txt  FMM_slo1.txt  FMM_slog.txt  FMM_slom.txt  FMM_slop.txt  FMM_slov.txt  FMMgrad_ibox_slo1.txt  FMMgrad_ibox_slom.txt  FMMgrad_ibox_slop.txt  JMM1dial_slo1.txt  JMM1dial_slog.txt  JMM1dial_slom.txt  JMM1dial_slop.txt  JMM1dial_slov.txt  JMM1dijkstra_slo1.txt  JMM1dijkstra_slog.txt  JMM1dijkstra_slom.txt  JMM1dijkstra_slop.txt  JMM1dijkstra_slov.txt  JMM2dial_ibox_slog.txt  JMM2dial_slo1.txt  JMM2dial_slog.txt  JMM2dial_slom.txt  JMM2dial_slop.txt  JMM2dial_slov.txt  JMM2dijkstra_ibox_slog.txt  JMM2dijkstra_slo1.txt  JMM2dijkstra_slog.txt  JMM2dijkstra_slom.txt  JMM2dijkstra_slop.txt  JMM2dijkstra_slov.txt  JMM3dial_V3_slog.txt  JMM3dial_V4_slog.txt  JMM3dial_ibox_slog.txt  JMM3dial_slo1.txt  JMM3dial_slog.txt  JMM3dial_slom.txt  (+26 more)
Figures/: CPUtime_vs_ERMS_slo_1.eps  CPUtime_vs_ERMS_slo_g.eps  CPUtime_vs_ERMS_slo_m.eps  CPUtime_vs_ERMS_slo_p.eps  CPUtime_vs_ERMS_slo_v.eps  CPUtime_vs_ErrMax_slo_1.eps  CPUtime_vs_ErrMax_slo_g.eps  CPUtime_vs_ErrMax_slo_m.eps  CPUtime_vs_ErrMax_slo_p.eps  CPUtime_vs_ErrMax_slo_v.eps  ERMS_vs_N_slo_1.eps  ERMS_vs_N_slo_g.eps  ERMS_vs_N_slo_m.eps  ERMS_vs_N_slo_p.eps  ERMS_vs_N_slo_v.eps  ErrMax_vs_N_slo_1.eps  ErrMax_vs_N_slo_g.eps  ErrMax_vs_N_slo_m.eps  ErrMax_vs_N_slo_p.eps  ErrMax_vs_N_slo_v.eps  GradERMS_vs_N_slo_1.eps  GradERMS_vs_N_slo_g.eps  GradERMS_vs_N_slo_m.eps  GradERMS_vs_N_slo_p.eps  GradERMS_vs_N_slo_v.eps  GradErrMax_vs_N_slo_1.eps  GradErrMax_vs_N_slo_g.eps  GradErrMax_vs_N_slo_m.eps  GradErrMax_vs_N_slo_p.eps  GradErrMax_vs_N_slo_v.eps
OldData/: FMM_ibox_slop.txt  FMMgrad_ibox_slog.txt  FMMgrad_ibox_slov.txt  JMM1dial_V3_slo1.txt  JMM1dial_V3_slom.txt  JMM1dial_ibox_slog.txt  JMM1dijkstra_ibox_slog.txt  JMM2dial_ibox_slog.txt  JMM3dial_V3_slog.txt  JMM3dial_V4_slog.txt  JMM3dijkstra_ibox_slog.txt  dial_es_iball_slog.txt  dial_es_iball_slop.txt  dial_fs_iball_slog.txt  dial_fs_iball_slop.txt  dial_fs_iball_slov.txt  dijkstra_es_ibox_slog.txt  dijkstra_freea1_ibox_slo1.txt  dijkstra_freea1_ibox_slog.txt  dijkstra_freea1_ibox_slom.txt  dijkstra_freea1_ibox_slov.txt  dijkstra_fs_ibox_slog.txt  dijkstra_fs_ibox_slom.txt  dijkstra_fs_ibox_slop.txt  olim8mp0_ibox_slo1.txt  olim8mp0_ibox_slom.txt  olim8mp0_ibox_slop.txt
cmake/: FindSphinx.cmake
examples/: README.md  a.txt  basic_solve.c  basic_solve.py  bcs.pickle  common.py  debug.py  debugging_bad_points.py  debugging_cutset.py  do_solves.sh  extract_verts_and_cells_from_tet_mesh.py  make_L_shaped_room_mesh.py  make_box_mesh.py  make_box_video.py  make_plots.py  make_room_video.py  meson.build  plotting.py  raytracing.c  raytracing.py  requirements-py35.txt  requirements.txt  run.sh  run_box_tests.sh  run_tests.sh  scratch.py  setup_examples.sh  show_box_mesh.py  solve_box.py  testing_diffraction.py  testing_field_pickling.py  testing_multiple_arrivals.py  testing_reflection.py  testing_reflections.py  transfer_solution.c  transfer_solution.py  using_utetra.py  using_utetra_requirements.txt  visualize_solve.py  viz_error_using_raytracing.c  (+3 more)
examples-old/: README.org  a.txt  debugging_bad_points.py  raytracing.c  requirements-py35.txt  run_basic_solve.sh  scratch.py  setup_examples.sh  testing_diffraction.py  testing_field_pickling.py  testing_multiple_arrivals.py  testing_reflection.py  transfer_solution.c  visualize_wavefront.py  viz_error_using_raytracing.c  viz_tetra_mesh.py
examples-old/common/: make_bounding_mesh.py  make_box_mesh.py  sort_bd_vtu.py  strip_off_comments.sh
examples-old/make_L_video/: run_for_all_point_sources.sh  setup.sh
examples-old/na_plots/: collect_data.sh  run_eik2g1.c
examples-old/sethian_shadow/: sethian_shadow.py  setup.sh
examples-old/sisc_plots/: reflection.py
examples-old/utd_wedge_test/: make_error_plots.py  make_wedge_video.py  plot_diff_coefs.py  utd_wedge_problem.py
examples/curvy/: curvy.c  generate_BaseSnowTest.py  meson.build
examples/itd/: HUTUB_pp2_in_cube_50k.off  HUTUB_pp2_in_cube_50k_high_res_ear.off  HUTUB_pp2_in_cube_50k_origin_fixed.off  HUTUB_pp2_in_cube_50k_origin_fixed_bust_only_BROKEN.off  README.md  itd.c  meson.build  scratch.py  spherical_grid.py
examples/simple_building/: README.md  make_wavefront_plots.py  meson.build  simple_building.c  viz.py
examples/sound_prop/: README.md  debug_viz.py  make_wavefront_plots.py  mesh.c  meson.build  plot_domain.py  render.c  render_bin_to_img.py  run_example.sh  simulate.c  simulate.py  slice.c
examples/varying_s/: make_linear_speed_func.py  meson.build  room.off  test.py  uline_test.py  utetra_test.py  varying_s.c  varying_s_convergence_test.c  varying_s_convergence_test.cpp
include/jmm/: alist.h  (+46 more)
src/: #eik2mp.c#  README.org  _version.py  alist.c  alist.h  array.c  array.h  bb.c  bb.h  bb.pxd  bicubic.c  bicubic.h  bmesh.c  bmesh.h  bmesh.pxd  bucket.c  camera.c  camera.h  camera.pxd  common.h  cubic.c  cubic.h  def.h  defs.pxd  dial.c  dial.pxd  edge.c  edge.h  edge.pxd  edgemap.c  edgemap.h  edgemap.pxd  eik.c  eik.h  eik2g1.c  eik2g1.h  eik2m1.c  eik2m1.h  eik2mp.c  eik3.c  (+88 more)
subprojects/: tetgen.wrap
test/: test_array.c  test_bb3.c  test_bb3tet.c  test_bb3tri.c  test_bicubic.c  test_bicubic.py  test_bmesh33.c  test_camera.c  test_cubic.py  test_dbl22.c  test_dbl44.c  test_edgemap.c  test_eik.py  test_eik3.c  test_eik_F3.py  test_eik_F4.py  test_geom.c  test_heap.py  test_mat.c  test_mat.py  test_mesh2.c  test_mesh3.c  test_opt.c  test_utri.c  test_vec.c
(+120 files in other folders)
